crates/repovec-ci/src/snapshots/repovec_ci__tests__help_output.snap
---
source: crates/repovec-ci/src/main.rs
assertion_line: 233
expression: output
---
Usage: repovec-ci [docs-gate] [--changed-file <path> [--changed-file <path>]...] [--help]
       repovec-ci [docs-gate] --stdin
       repovec-ci systemd-gate

Reads a changed-file list and prints documentation-gate decisions in
GitHub Actions output format, or validates checked-in systemd units and
the appliance directory-layout assets.
