crates/repovec-ci/src/snapshots/repovec_ci__tests__invalid_flag_error.snap
---
source: crates/repovec-ci/src/main.rs
assertion_line: 263
expression: error.to_string()
---
unsupported argument: --unknown

Usage: repovec-ci [docs-gate] [--changed-file <path> [--changed-file <path>]...] [--help]
       repovec-ci [docs-gate] --stdin
       repovec-ci systemd-gate

Reads a changed-file list and prints documentation-gate decisions in
GitHub Actions output format, or validates checked-in systemd units and
the appliance directory-layout assets.
