crates/repovec-ci/src/snapshots/repovec_ci__tests__stdin_empty_output.snap
---
source: crates/repovec-ci/src/main.rs
expression: buffer_to_string(buffer)
---
should_run=true
docs_gate_required=true
nixie_required=true
reason=missing-changed-files
matched_files_count=0
matched_files=
conservative_fallback_files_count=0
conservative_fallback_files=
