crates/repovec-ci/src/snapshots/repovec_ci__tests__systemd_gate_error_message.snap
---
source: crates/repovec-ci/src/main.rs
expression: error.to_string()
---
repovecd.service is missing [Service]
