crates/repovec-ci/src/snapshots/repovec_ci__tests__systemd_gate_real_validation_success.snap
---
source: crates/repovec-ci/src/main.rs
expression: buffer_to_string(buffer)
---
checked-in systemd units and directory layout satisfy the appliance contract
