crates/repovec-ci/src/snapshots/repovec_ci__tests__systemd_gate_success_confirmation.snap
---
source: crates/repovec-ci/src/main.rs
assertion_line: 335
expression: buffer_to_string(buffer)
---
checked-in systemd units and directory layout satisfy the appliance contract
